--- a/sass/includes/10-header/mainmenu.scss
+++ b/sass/includes/10-header/mainmenu.scss
@@ -2,7 +2,64 @@
 
 
 #main_menu {
-  display: none;
+  background-color: #03013A;
+  padding: 10px 0;
+
+  .current a {
+    text-decoration: underline;
+  }
+
+  ul {
+    margin: 0;
+  }
+
+  li {
+    list-style: none;
+
+    &.back {
+      border-bottom: 2px solid #acbedb; /*background: #E6E8EA;*/
+      height: 30px;
+      position: absolute;
+      z-index: 8;
+    }
+
+    a:hover,
+    a:active,
+    a:visited {
+      border: none;
+    }
+
+    a {
+      color: #cddaec;
+      display: block;
+      font: bold 12px "Trebuchet MS",Verdana;;
+      letter-spacing: 0;
+      outline: none;
+      overflow: hidden;
+      padding: 10px 0;
+      position: relative;
+      text-align: center;
+      text-decoration: none;
+      text-transform: uppercase;
+      z-index: 10;
+
+      &:focus,
+      &:hover {
+        color: #fff;
+      }
+
+      .lang_ru-ru & {
+        font-size: 11px;
+        margin-left: 9px;
+        margin-right: 9px;
+      }
+
+      .lang_fi-fi & {
+        font-size: 10px;
+        margin: auto 10px;
+      }
+    }
+  }
 }
 
 
@@ -10,9 +67,9 @@
 @media (min-width: $screen-md-min) {
   #main_menu {
     background: url(../images/menu2.gif);
-    display: block;
     height: 50px;
-    margin-top:1px;
+    margin-top: 1px;
+    padding: 0;
     width: 950px;
 
     .lavalampnoimage {
@@ -25,59 +82,16 @@
       width: 950px;
     }
 
-    .current a {
-      text-decoration: underline;
-    }
-
-    ul {
-      margin: 0;
-    }
-
     li {
       float: left;
-      list-style: none;
       padding-top: 10px;
 
-      &.back {
-        border-bottom: 2px solid #acbedb; /*background: #E6E8EA;*/
-        height: 30px;
-        position: absolute;
-        z-index: 8;
-      }
-
-      a:hover,
-      a:active,
-      a:visited {
-        border: none;
-      }
-
       a {
-        color: #cddaec;
-        display: block;
         float: left;
-        font: bold 12px "Trebuchet MS",Verdana;;
         height: 30px;
-        letter-spacing: 0;
         margin: auto 12px;
-        outline: none;
-        overflow: hidden;
-        position: relative;
-        text-align: center;
-        text-decoration: none;
-        text-transform: uppercase;
+        padding: 0;
         top: 7px;
-        z-index: 10;
-
-        .lang_ru-ru & {
-          font-size: 11px;
-          margin-left: 9px;
-          margin-right: 9px;
-        }
-
-        .lang_fi-fi & {
-          font-size: 10px;
-          margin: auto 10px;
-        }
       }
     }
   }
